# Hotel-Rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  trozos_de_codigo_descartados.txt
documentacion/: aa_backlog.md
documentacion_y_varios/: aa_backlog.md  trozos_de_codigo_descartados.txt
migrations/: 20250605134028_habitaciones_huespedes_y_estancias.down.sql  20250605134028_habitaciones_huespedes_y_estancias.up.sql
migrations_mariadb/: 20250605134028_habitaciones_huespedes_y_estancias.up.sql
migrations_sqlite/: 20260614_habitaciones_huespedes_y_estancias.down.sql  20260614_habitaciones_huespedes_y_estancias.up.sql
src/: lib.rs  main.rs  util.rs
src/comun/: correo_electronico.rs  documento_de_identidad.rs  mod.rs  nacionalidad.rs  telefono.rs
src/estancias_y_reservas/: datos_de_estancias.rs  datos_de_estancias_MariaDB.rs  datos_de_estancias_Pruebas.rs  datos_de_reservas_mariadb.rs  datos_de_reservas_pruebas.rs  datos_estancias.rs  datos_estancias_mariadb.rs  datos_estancias_mock.rs  datos_reservas_mariadb.rs  datos_reservas_mock.rs  estancias_para_pruebas.rs  estancias_y_reservas.rs  manejo_de_estancias_y_reservas.rs  mod.rs  modelo.rs  persistencia_de_estancias.rs  persistencia_de_estancias_en_mariadb.rs  persistencia_de_estancias_en_sqlite.rs  persistencia_de_estancias_mock.rs  persistencia_de_reservas_en_mariadb.rs  persistencia_de_reservas_en_sqlite.rs  persistencia_de_reservas_mock.rs  persistencia_estancias.rs  persistencia_estancias_mariadb.rs  persistencia_estancias_mock.rs  (+3 more)
tests/: tests_de_integracion.rs  tests_de_integracion_con_mariadb.rs
(+33 files in other folders)
