[package]
name = "hotel_rust"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.41"
uuid = { version="1.16.0", features=["v7"] }
sqlx = { version="0.8.6", features=["runtime-tokio", "mysql", "migrate", "uuid", "chrono"] }
tokio = { version="1.45.1", features=["rt", "macros"] }
dotenvy = "0.15.7"
